@@ -193,7 +193,9 @@ public final class FileIO {
 
     private void readObject(ObjectInputStream in) throws IOException, ClassNotFoundException {
       in.defaultReadObject();
-      if (parent_ppt_name != null) parent_ppt_name.intern();
+      if (parent_ppt_name != null) {
+        parent_ppt_name = parent_ppt_name.intern();
+      }
     }
   }
 
@@ -1619,7 +1621,7 @@ public final class FileIO {
         if (nonce_number == null) {
           throw new Daikon.TerminationMessage("File ended while trying to read nonce", state);
         }
-        nonce = new Integer(nonce_number);
+        nonce = Integer.valueOf(nonce_number);
 
         if (Global.debugPrintDtrace) {
           to_write_nonce = true;
@@ -1828,10 +1830,10 @@ public final class FileIO {
       /*@Interned*/ Invocation invok = invok_noncanonical.canonicalize();
       if (counter.containsKey(invok)) {
         Integer oldCount = counter.get(invok);
-        Integer newCount = new Integer(oldCount.intValue() + 1);
+        Integer newCount = oldCount.intValue() + 1;
         counter.put(invok, newCount);
       } else {
-        counter.put(invok, new Integer(1));
+        counter.put(invok, 1);
       }
     }
 
@@ -2639,7 +2641,7 @@ public final class FileIO {
         relative_name = relative_name.intern();
       }
       for (VarParent parent : parents) {
-        parent.parent_ppt.intern();
+        parent.parent_ppt = parent.parent_ppt.intern();
         if (parent.parent_variable != null) {
           parent.parent_variable = parent.parent_variable.intern();
         }
